--- a/index.html
+++ b/index.html
@@ -48,7 +48,36 @@
         </div>
       </div>
     </div>
-
+    <div style="display: flex; flex-direction: row">
+      <footer
+        style="
+          background-color: #ffffff;
+          width: 100vw;
+          text-align: center;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        "
+      >
+        <img
+          width="14"
+          height="14"
+          src="https://img.icons8.com/ios/50/info--v1.png"
+          alt="info--v1"
+        />
+        <p
+          style="
+            color: #000000;
+            font-size: 14px;
+            padding-left: 5px;
+            padding-bottom: 2px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+          "
+        >
+          Made by Sudip Halder.
+        </p>
+      </footer>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
